[tool.pdm]

[project]
name = "nonebot_plugin_PicMenu"
version = "0.2.0"
description = "A Plugin for Nonebot2 to generate picture menu of Plugins"
authors = [{ name = "hamo-reid", email = "190395489@qq.com" }]
dependencies = [
    "nonebot2>=2.0.0rc1",
    "nonebot-adapter-onebot>=2.2.2",
    "pydantic>=1.10.6",
    "Pillow>=9.4.0",
    "pathlib>=1.0.1",
    "fuzzywuzzy>=0.18.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["black>=23.1.0", "isort>=5.12.0", "ruff>=0.0.257"]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
